fix(tessellation): change to https git submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "tessellation"]
 	path = tessellation
-	url = git@github.com:Ludusamo/tessellation.git
+	url = https://github.com/Ludusamo/tessellation.git
 	branch = master
 
